hero section done

--- a/index.html
+++ b/index.html
@@ -20,5 +20,24 @@
             </div>
          </nav>
     </header>
+    <!-- hero section -->
+    <div class="contaner">
+
+        <div class="hero">
+            <div class="hero_img">
+                <img class="img_01" src="img/anh-nguyen-kcA-c3f_3FE-unsplash.jpg" alt="">
+            </div>
+            <div class="hero_contant">
+                <div class="tag">
+                    50% Off on All  Products
+                </div>
+                <h1> Enjoy Your <br> Delicious Food</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto at modi</p>
+                <button class=" explore_btn"> 
+                    Explore Now
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
