--- a/index.html
+++ b/index.html
@@ -38,6 +38,104 @@
                 </button>
             </div>
         </div>
+        <scction class="features">
+            <div class="feature">
+                <img src="icons/discount.png" alt="">
+                <div class="feature_content"> 
+                    <h3>Discount Voucher</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                </div>
+            </div>
+            <div class="feature">
+                <img src="icons/fresh.png" alt="">
+                <div class="feature_content"> 
+                    <h3>Fresh Healthy Food</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                </div>
+            </div>
+            <div class="feature">
+                <img src="icons/delivery.png" alt="">
+                <div class="feature_content"> 
+                    <h3>Fast Home Delivery</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                </div>
+            </div>
+        </scction>
+        <div class="divider"></div>
+
+        <!-- manu -->
+        <div class="manu">
+            <div class="tag">Manu</div>
+            <h2>Explore Manu</h2>
+            <div class="grid">
+                <div class="iteam1">
+                    <img class="grid-img" src="img/manu5.jpeg" alt="img1">
+                </div>
+                <div class="iteam2">
+                    <img class="grid-img" src="img/manu1.jpg" alt="img1">
+                </div>
+                <div class="iteam3">
+                    <img class="grid-img" src="img/manu2.jpg" alt="img1">
+                </div>
+                <div class="iteam4">
+                    <img class="grid-img" src="img/manu3.jpg" alt="img1">
+                </div>
+                <div class="iteam5">
+                    <img class="grid-img" src="img/manu6.jpg" alt="img1">
+                </div>
+                <div class="iteam6">
+                    <img class="grid-img" src="img/manu7.jpg" alt="img1">
+                </div>
+                <div class="iteam7">
+                    <img class="grid-img" src="img/manu8.jpg" alt="img1">
+                </div>
+            </div>
+        </div>
+
     </div>
+    <footer>
+        <div class="footer_contaner">
+            <div class="footer_logo">
+                <img src="img/logo.png" alt="">
+            </div>
+            <div class="link_list">
+                <h3>Main List</h3>
+                <ul>
+                    <li>Order Traking</li>
+                    <li>New  Order</li>
+                    <li>Contact US</li>
+                    <li>News & Blogs</li>
+                </ul>
+            </div>
+            <div class="link_list">
+                <h3>Support</h3>
+                <ul>
+                    <li>About US</li>
+                    <li> Privacy Policy</li>
+                    <li>Terms & Conditons</li>
+                
+                </ul>
+            </div>
+            <div class="news_latter">
+                <h3>Support</h3>
+                <input type="email" placeholder="Enter Your Email.......">
+                <h3>Foow US</h3>
+                <div class="lcon_contener">
+                    <div class="icon">
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+    </div>
+</footer>
 </body>
 </html>
